--- a/google_ads_dental_targeting.html
+++ b/google_ads_dental_targeting.html
@@ -81,7 +81,7 @@
     <script>
         // CONFIGURATION - Replace with your LocationIQ API key
         // Get free key at: https://locationiq.com/ (5,000 requests/day free tier)
-        const LOCATIONIQ_API_KEY = 'YOUR_LOCATIONIQ_API_KEY';
+        const LOCATIONIQ_API_KEY = 'pk.358098a68d38877064a347e670c88c90';
         
         // You can also use Geoapify (3,000/day free): https://www.geoapify.com/
         // const GEOAPIFY_API_KEY = 'YOUR_GEOAPIFY_API_KEY';
